fix: Adjusting the email notification class